ExceptionFor<ErrorCodes::WriteConflict> should resolve to WriteConflictException

XMLWordPrintableJSON

    • Fully Compatible
    • v6.0, v5.0, v4.4, v4.2
    • Service Arch 2022-04-18, Service Arch 2022-05-02, Service Arch 2022-05-16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Right now they are separate types which means that we don't round-trip through Status correctly. This seems like a bug waiting to happen. This can be done by partially specializing ExceptionForDispatcher<ErrorCodes::WriteConflict, CategoryList<categories...>> at https://github.com/mongodb/mongo/blob/c61595630908224faa65856222ae7186b72e54cf/src/mongo/util/assert_util.h#L202-L207.

            Assignee:
            Amirsaman Memaripour
            Reporter:
            Mathias Stearn
            Votes:
            1 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: