SERVER-54284 Fix resolution for `ExceptionFor<ErrorCodes::WriteConflict>`

GitOrigin-RevId: ade105650ddf077e095f24455204be7b035d1620