src/mongo/db/modules/enterprise/src/fcbis/file_copy_based_initial_syncer.cpp
@@ -10,7 +10,7 @@
 #include "mongo/db/catalog/catalog_control.h"
 #include "mongo/db/catalog_raii.h"
 #include "mongo/db/client.h"
-#include "mongo/db/concurrency/write_conflict_exception.h"
+#include "mongo/db/concurrency/exception_util.h"
 #include "mongo/db/cursor_server_params.h"
 #include "mongo/db/dbdirectclient.h"
 #include "mongo/db/dbhelpers.h"
